# arkd-rs

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.prod  Justfile  README.md  SECURITY.md  WORKFLOW.md  config.example.toml  deny.toml  docker-compose.light.yml  docker-compose.prod.yml
.github/: go-e2e-debug.patch
.github/workflows/: ci.yml  docker-publish.yml  e2e.yml  go-e2e.yml  integration.yml  proto.yml  release.yml  security.yml
benches/: ark_benchmarks.rs
config/: arkd.light.toml
contrib/: arkd.service  config.example.toml  install.sh
crates/ark-cli/: Cargo.toml
crates/arkd-api/: Cargo.toml  build.rs
crates/arkd-bitcoin/: Cargo.toml
crates/arkd-client/: Cargo.toml
crates/arkd-core/: Cargo.toml
crates/arkd-db/: Cargo.toml
crates/arkd-fee-manager/: Cargo.toml
crates/arkd-scanner/: Cargo.toml
crates/arkd-wallet-bin/: Cargo.toml
crates/dark-api/: Cargo.toml
crates/dark-client/: Cargo.toml
crates/dark-confidential/: Cargo.toml
crates/dark-confidential/benches/: balance_proof.rs  pedersen.rs  range_proof.rs
crates/dark-confidential/fuzz/: Cargo.toml
crates/dark-confidential/fuzz/fuzz_targets/: verify_range.rs
crates/dark-confidential/src/: balance_proof.rs  blinding.rs  commitment.rs  disclosure.rs  errors.rs  lib.rs  nullifier.rs  range_proof.rs
crates/dark-confidential/src/disclosure/: mod.rs  source_of_funds.rs
crates/dark-confidential/src/stealth/: mod.rs  sender.rs
crates/dark-confidential/tests/vectors/: balance_proof.json  blinding.json  nullifier.json  pedersen.json
crates/dark-core/: Cargo.toml
crates/dark-db/: Cargo.toml
crates/dark-fee-manager/: Cargo.toml
crates/dark-live-store/: Cargo.toml
crates/dark-psar/: Cargo.toml
crates/dark-scanner/: Cargo.toml
crates/dark-scheduler/: Cargo.toml
crates/dark-von/: Cargo.toml
crates/dark-von-musig2/: Cargo.toml
crates/dark-wallet/: Cargo.toml
crates/dark-wallet-rest/: Cargo.toml  openapi.json
crates/dark-wallet-rest/src/: auth.rs  config.rs  dto.rs  error.rs  lib.rs  state.rs
crates/dark-wallet-rest/src/api/v1/: events.rs  exits.rs  intents.rs  mod.rs  playground.rs  rounds.rs  txs.rs  vtxos.rs
crates/dark-wallet-rest/tests/: openapi_smoke.rs
docs/: architecture.md  compliance-source-proofs.md  light-mode.md  rest-api.md  testing.md
docs/adr/: 0001-sqlx-over-diesel.md  0002-nullifier-derivation.md  0002-tonic-0.12-pin.md  0005-cel-fee-programs.md  (+12 more)
patches/: go-client-nonce-fix.patch
proto/: buf.yaml
scripts/: e2e-test.sh  generate-crate-graph.sh  go-e2e.sh  psar-scaling.sh
src/: cli.rs  config.rs  main.rs  profiling.rs
tests/: _psar_support.rs  e2e_confidential.rs  e2e_psar_n12.rs  e2e_psar_n4_smoke.rs  e2e_regtest.rs  nigiri-config.toml
(+226 files in other folders)
